Overflow x da lista fixado

--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -57,14 +57,28 @@
 }
 
 @media screen and (max-width: 450px){
+    body {
+        overflow-x: hidden;
+    }
+    .content {
+        padding: 1px;
+    }
     .pokemon {
+        max-width: 88%;
         margin: 5px;
         padding: 10px;
     }
 }
-@media screen and (max-width: 400px){
+@media screen and (max-width: 395px){
+    body {
+        overflow-x: hidden;
+    }
+    .content{
+        margin: auto;
+    }
     .pokemon {
-        margin: 5px 3px;
+        max-width: 88%;
+        margin: 5px;
         padding: 7px;
         border-radius: 10px;
     }
